--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -71,27 +71,15 @@
     <h2 class="text-center mb-3 fw-semibold">สินค้าของเรา</h2>
     <div class="d-flex justify-content-center flex-wrap mt-4">
       <div class="card allproduct-preview">
-        <img src="assets/img/card1.jpeg" class="card-img-top" alt="..." draggable="false">
+        <img src="assets/img/bill1.png" class="card-img-top" alt="..." draggable="false">
         <div class="p-2">
-          <p class="card-text">นามบัตร</p>
-        </div>
-      </div>
-      <div class="card allproduct-preview">
-        <img src="assets/img/Flyers-Brochure-Test-mage.jpg" class="card-img-top" alt="..." draggable="false">
-        <div class="p-2">
-          <p class="card-text">แผ่นพับ & ใบปลิว</p>
+          <p class="card-text">กระดาษต่อเนื่อง & บิลเล่ม</p>
         </div>
       </div>
       <div class="card allproduct-preview">
         <img src="assets/img/สติ๊กเกอร์.jpg" class="card-img-top" alt="..." draggable="false">
         <div class="p-2">
           <p class="card-text">สติ๊กเกอร์</p>
-        </div>
-      </div>
-      <div class="card allproduct-preview">
-        <img src="assets/img/bill1.png" class="card-img-top" alt="..." draggable="false">
-        <div class="p-2">
-          <p class="card-text">บิล</p>
         </div>
       </div>
       <div class="card allproduct-preview">
