--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -78,7 +78,7 @@
                     <div class="w-100">
                         <div class="form-outline mb-4">
                             <input type="text" id="name" name="name" class="form-control" required
-                                pattern="[A-Za-z ]+" />
+                                pattern="[A-Za-zก-๙ ]+$" />
                             <label class="form-label" for="form1Example2">ชื่อ-นามสกุล</label>
                             <div class="invalid-feedback">
                                 ชื่อนามสกุลต้องเป็นอักขระ
