--- a/views/pages/address.ejs
+++ b/views/pages/address.ejs
@@ -76,7 +76,9 @@
                     <% }); %>
                 </div>
                 <% } else { %>
-                    <b class="text-center">ยังไม่มีที่อยู่</b>
+                    <div class="w-100 mt-5   text-center">
+                        <b class="fs-4">ยังไม่มีที่อยู่</b>
+                    </div>
                 <% } %>
             </div>
         </div>
