--- a/views/pages/product_select/envelope.ejs
+++ b/views/pages/product_select/envelope.ejs
@@ -9,8 +9,8 @@
             </div> -->
             <select name="option[]" id="papertype" class="form-select radio-choice" data-img-id="<%= count %>">
                 <% options.forEach((option) => { %>
-                <% if(option.parcel_type === 'papertype'){ %>
-                <option value="<%= option.option_name %>" data-price="<%= option.option_perPrice %>"
+                <% if(option.option_type === 'papertype'){ %>
+                <option value="<%= option.option_id %>" data-price="<%= option.price_per_unit %>"
                     data-img="<%= option.option_img %>">
                     <%= option.option_name %>
                 </option>
@@ -32,8 +32,8 @@
             </div>
             <select name="option[]" id="printside" class="form-select radio-choice" data-img-id="<%= count %>">
                 <% options.forEach((option) => { %>
-                <% if(option.parcel_type === 'printside'){ %>
-                <option value="<%= option.option_name %>" data-price="<%= option.option_perPrice %>"
+                <% if(option.option_type === 'printside'){ %>
+                <option value="<%= option.option_id %>" data-price="<%= option.price_per_unit %>"
                     data-img="<%= option.option_img %>">
                     <%= option.option_name %>
                 </option>
@@ -43,27 +43,3 @@
         </div>
     </div>
 </div>
-
-<div class="mb-5" id="<%= count++ %>">
-    <input type="text" name="spec" value="รูปแบบ" hidden>
-    <legend>การปั้ม</legend>
-    <hr>
-    <div class="form-check ps-0">
-        <div class="option-select">
-            <div class="border">
-                <img class="selectedimg" id="selectedimg<%= count %>" src="" alt="" style="width: 80px; height: 80px;">
-            </div>
-            <select name="option[]" id="pumping" class="form-select radio-choice" data-img-id="<%= count %>">
-                <% options.forEach((option) => { %>
-                <% if(option.parcel_type === 'pumping'){ %>
-                <option value="<%= option.option_name %>" data-price="<%= option.option_perPrice %>"
-                    data-img="<%= option.option_img %>">
-                    <%= option.option_name %>
-                </option>
-                <% } %>
-                <% }) %>
-            </select>
-        </div>
-    </div>
-</div>
-
